# effective-garbanzo

./: .gitignore  README.md  audio_player.py  button_handler.py  config.py  diagnose_tag.py  main.py  pyproject.toml  requirements.txt  rfid_reader.py  web_server.py  write_tag.py
scripts/: diagnose_tag.py  led_diagnostic.py  write_hello_world.py  write_tag.py
src/rfid_audio_player/: __init__.py  audio_player.py  button_handler.py  config.py  rfid_reader.py  web_server.py
static/: index.html
tests/: __init__.py  test_audio_player.py  test_button_handler.py  test_config.py  test_rfid_reader.py
