[project]
name = "effective-garbanzo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gpiozero>=2.0.1",
    "pi-rc522",
    "pygame>=2.6.1",
    "python-vlc>=3.0.0",
    "rpi-lgpio>=0.6",
    "spidev",
]

[tool.uv.sources]
pirc522 = { git = "https://github.com/hoffie/pi-rc522-gpiozero" }
