[project]
name = "effective-garbanzo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "gpiozero>=2.0.1",
    "ndeflib>=0.3.3",
    "pi-rc522",
    "pygame>=2.6.1",
    "rpi-lgpio>=0.6",
    "spidev",
]

[tool.uv.sources]
pirc522 = { git = "https://github.com/hoffie/pi-rc522-gpiozero" }
