[project]
name = "rfid-audio-player"
version = "0.1.0"
description = "A Raspberry Pi-based RFID-triggered audio player with web interface"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "gpiozero>=2.0.1",
    "ndeflib>=0.3.3",
    "pi-rc522",
    "pygame>=2.6.1",
    "rpi-lgpio>=0.6",
    "spidev",
    "rpi-ws281x>=5.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
pirc522 = { git = "https://github.com/hoffie/pi-rc522-gpiozero" }
